Fixed splash page bug where empty space would be added to top and bottom, it was because of the iframe and a bug where the h1 margins would overflow its container. Made the splash page banner always vertically centered. Added profile dropdown containing settings and logout. Added link to users instagram for now, might have to remove it later on.

--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -1073,6 +1073,12 @@ html, body {
     height: 100%;
 }
 
+iframe {
+  position: absolute;
+  top: -999999px;
+  left: -999999px;
+}
+
 body {
     @include breakpoint($medium-columns) {
         background: url(/assets/instalurk_party_bus.jpg) no-repeat center center fixed;
