--- a/app/assets/stylesheets/partials/_spinner.scss
+++ b/app/assets/stylesheets/partials/_spinner.scss
@@ -1,46 +1,65 @@
+$color-1: #9d4fbb;
+$color-2: #9d4fbb;
+$color-3: #9d4fbb;
+$color-4: #9d4fbb;
+
 .spinner-container {
-  margin-top: 200px;
-  text-align: center;
-  animation: opacity 0.5s normal forwards ease-in-out;
+    margin-top: 200px;
+    text-align: center;
+    animation: opacity 0.5s normal forwards ease-in-out;
 }
 
 .spinner {
-  text-align: center;
-  border-radius:100%;
-  display:inline-block;
-  height:30px;
-  width:30px;
-  animation:loader infinite 4s;
-  box-shadow:25px 25px #3498db,
-    -25px 25px #9b59b6,
-    -25px -25px #e74c3c,
-    25px -25px #2ecc71;
+    position: relative;
+    text-align: center;
+    border-radius:100%;
+    display:inline-block;
+    height:30px;
+    width:30px;
+    animation:loader infinite 4s;
+    box-shadow:25px 25px $color-1,
+    -25px 25px $color-2,
+    -25px -25px $color-3,
+    25px -25px $color-4;
+    // &:before {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: -1;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: #9d4fbb;
+    //     width: 120px;
+    //     height: 120px;
+    //     top: -45px;
+    //     left: -45px;
+    //     border-radius: 100%;
+    // }
 }
 @keyframes loader {
-  0%,100% {
-      box-shadow:25px 25px #3498db,
-        -25px 25px #9b59b6,
-        -25px -25px #e74c3c,
-        25px -25px #2ecc71;
-  }
-  25% {
-      box-shadow:-25px 25px #3498db,
-        -25px -25px #9b59b6,
-        25px -25px #e74c3c,
-        25px 25px #2ecc71;
-  }
-  50% {
-      box-shadow:-25px -25px #3498db,
-        25px -25px #9b59b6,
-        25px 25px #e74c3c,
-        -25px 25px #2ecc71;
-  }
-  75% {
-      box-shadow:25px -25px #3498db,
-        25px 25px #9b59b6,
-        -25px 25px #e74c3c,
-        -25px -25px #2ecc71;
-  }
+    0%,100% {
+      box-shadow:25px 25px $color-1,
+        -25px 25px $color-2,
+        -25px -25px $color-3,
+        25px -25px $color-4;
+    }
+    25% {
+      box-shadow:-25px 25px $color-1,
+        -25px -25px $color-2,
+        25px -25px $color-3,
+        25px 25px $color-4;
+    }
+    50% {
+      box-shadow:-25px -25px $color-1,
+        25px -25px $color-2,
+        25px 25px $color-3,
+        -25px 25px $color-4;
+    }
+    75% {
+      box-shadow:25px -25px $color-1,
+        25px 25px $color-2,
+        -25px 25px $color-3,
+        -25px -25px $color-4;
+    }
 }
 @keyframes opacity {
     0% {
